Fixed spurious typos

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -33,7 +33,7 @@ Week 2 - Trophic Cascades and Megafaunal Collapse:
     author: "Robert L. Pittman and Susan J. Chivers."
     journal: "Natural History"
     volume: "12/1998 - 1/1999"
-    description: "This magazine article describes the author's observation of a coordinated killer whale attack on a pod of sperm whales of the coast of California."
+    description: "This magazine article describes the author's observation of a coordinated killer whale attack on a pod of sperm whales off the coast of California."
 
   - title: "Sequential megafaunal collapse in the North Pacific Ocean: An ongoing legacy of industrial whaling?"
     author: "A. M. Springer et al.."
@@ -41,7 +41,7 @@ Week 2 - Trophic Cascades and Megafaunal Collapse:
     volume: 100
     number: (21)
     year: 2003
-    description: "A sudden decline in the population of Stellar sea lions in the Northern Pacific Ocean and Bering during the 1980's took the marine conservation community by surprise. While many hypothesized the cause was due to nutritional limitation, the authors of this work describe an alternative hypothesis in which the post-war whaling industry lead to a sequential megafaunal collapse, upending the fragile marine ecosystem."
+    description: "A sudden decline in the population of Stellar sea lions in the Northern Pacific Ocean and Bering during the 1980's took the marine conservation community by surprise. While many hypothesized the cause was due to nutritional limitation, the authors of this work describe an alternative hypothesis in which the post-war whaling industry led to a sequential megafaunal collapse, upending the fragile marine ecosystem."
 
   - title: "Mammal-eating killer whales, industrial whaling, and the sequential megaffaunal collapse in the North Pacific Ocean: A reply to critics of Springer <i>et al.</i> 2003"
     author: "A. M. Springer et al.."
