Added Will to the site

--- a/_data/members.yaml
+++ b/_data/members.yaml
@@ -135,6 +135,12 @@
   image: manuel.jpg
   role: GTA
 
+- name: William Schmidt
+  email: wschmidt
+  year: Junior
+  major: Bioengineering
+  image: will.jpg
+  role: UTA
 
 - name: Janice Jeon
   email: jjeon
