Fixed more typos

--- a/_data/members.yaml
+++ b/_data/members.yaml
@@ -101,7 +101,7 @@
 
 - name: Andrew Montequin
   email: amontequin
-  year: Junior
+  year: Senior 
   major: Bioengineering
   image: amontequin.png
   role: UTA
