Fixed name typos

--- a/_data/members.yaml
+++ b/_data/members.yaml
@@ -83,7 +83,7 @@
   image: emeany.png
   role: UTA
 
-- name: Emily Miao
+- name: Emily Miaou
   email: emiaou
   year: Junior
   major: Chemical Engineering
@@ -101,7 +101,7 @@
 
 - name: Andrew Montequin
   email: amontequin
-  year: Senior 
+  year: Senior
   major: Bioengineering
   image: amontequin.png
   role: UTA
@@ -151,7 +151,7 @@
 
 
 - name: Claudia Jette
-  email: cjette
+  email: cajette
   year: G1
   major: Biochemistry & Molecular Biophysics
   image: cjette.png
