Added CBBTN to website.

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -27,6 +27,14 @@ the cell that we will turn to repeatedly throughout the term.  This article give
 an introduction to the “statistical mechanics protocol” that can be used in problems
 ranging from the function of ion channels to how genes are regulated.'
 
+  - title: "Cell Biology by the Numbers"
+    author: "Rob Phillips and Ron Milo."
+    journal: Garland Science
+    year: 2015
+    description: "This book gives a view of how biological numeracy can provide
+insights into a broad variety of topics in modern biology." 
+    link: "http://book.bionumbers.org"
+
 Week 2 - Trophic Cascades and Megafaunal Collapse:
 
   - title: "Terror in Black and White"
