Added videos to readings page.

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -73,7 +73,7 @@ Week 2 - Trophic Cascades and Megafaunal Collapse:
     PDF: "Springer2008.pdf"
     description: 'The author 2003 paper on the megafaunal collapse in the North Pacific Ocean was met with harsh criticism and dubious claims and suspect claims of probability. In this work, the authors respond to these criticisms in a detailed manner, strengthening their claims.'
 
-  - title: "Killer appetites: assesing the role of predators in ecological communities."
+  - title: "Killer appetites: assesing the role of predators in ecological communities"
     author: "T. M. Williams et al.."
     journal: "Ecology"
     volume: 85
@@ -90,6 +90,16 @@ Week 2 - Trophic Cascades and Megafaunal Collapse:
     year: 2009
     PDF: "Estes2009.pdf"
     description: "The authors examine the megafaunal collapse of Orcas due to a decline in sea otter populations. This work emphasizes the interconnectedness of ecosystems and how small perturbations of one component can trigger large-scale changes."
+
+  - title: Dangerous Migrations (<a href="https://www.youtube.com/watch?v=qdqIC8MYUOE"> Part I</a> and <a href="https://www.youtube.com/watch?v=vom31xAF9t8"> Part II</a>)
+    author: David Attenborough
+    journal: National Geographic Wild
+    year: 2017
+    description: "We discussed keystone species and tropic cascades with our final example
+being the plight of the wildebeests in the Serengeti.  This two video series from legendary
+David Attenborough has the most stunning footage of the great migration I have ever seen.
+You are busy, but perhaps take 30 minutes to watch at least part of it."
+
 
 Week 3 - Evolution:
   - title: Whale Evolution
