Fixed a small typo.

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -92,7 +92,7 @@ Week 2 - Trophic Cascades and Megafaunal Collapse:
     description: "The authors examine the megafaunal collapse of Orcas due to a decline in sea otter populations. This work emphasizes the interconnectedness of ecosystems and how small perturbations of one component can trigger large-scale changes."
 
   - title: Dangerous Migrations (<a href="https://www.youtube.com/watch?v=qdqIC8MYUOE"> Part I</a> and <a href="https://www.youtube.com/watch?v=vom31xAF9t8"> Part II</a>)
-    author: David Attenborough
+    author: David Attenborough.
     journal: National Geographic Wild
     year: 2017
     description: "We discussed keystone species and tropic cascades with our final example
