Added a link to a missing paper.

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -186,5 +186,6 @@ Week 7 -  The Body Plan:
     volume: 110
     number: (17)
     year: 2013
+    PDF: Liu2013.pdf
     description:
       "In this work, the authors test the assertion in Deriever and Nüsslein-Volhard that the exponential distribution of the <i>bicoid</i> morphogen in <i>Drosophila</i> was due to diffusion of the protein from the anterior pole."
