Added next homework and a paper.

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -128,6 +128,15 @@ Week 3 - Evolution:
     description:
       "While land-dwelling tetrapods arose from aquatic life, several large aquatic mammals developed from land-dwelling tetrapods venturing into the water. This paper covers the origins of dolphins, whales, and porpoises and covers the evolution of the cetacean organ system in detail."
 
+  - title: "Molecular evolution tracks macroevolutionary transitions in Cetacea"
+    author: "Michael R. McGowen, John Gatesy, and Derek E. Wildman."
+    journal: "Cell Press: Trends in Ecology and Evoltution"
+    volume: 29
+    number: (6)
+    year: 2014
+    PDF: "McGowen2014.pdf"
+    description: "This  paper gives a beautiful description of the way in which molecules have evolved in  Cetaceans with respect to other mammals."
+
 Week 4 - Population Genetics:
   - title: "Gene Frequency in Small Populations of Mutant <i> Drosophila</i>"
     author: "Peter Buri."
