Added lecture slides.

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -48,6 +48,19 @@ insights into a broad variety of topics in modern biology."
 
 Week 2 - Trophic Cascades and Megafaunal Collapse:
 
+  # - title: How should we be selecting our graduate students?
+  #   author: "Orion Weiner."
+  #   journal:
+  #   volume:
+  #   number:
+  #
+  - title: "Some animals ar emore equal than others"
+    author: Howard Hughes Medical Institute
+    year: 2013
+    link: "http://www.hhmi.org/biointeractive/some-animals-are-more-equal-others-keystone-species-and-trophic-cascades"
+    description: This fantastic video describes the experiment performed by Robert Paine that revealed the importance of keystone species.
+
+
   - title: "Terror in Black and White"
     author: "Robert L. Pittman and Susan J. Chivers."
     journal: "Natural History"
