Fixed a typo in YAML that made github yell at me

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -141,11 +141,11 @@ Week 3 - The Fossil Record and Evolution:
     volume: XXIII
     year: 1863
     PDF: "Kelvin1863.pdf"
-    description: This fun paper by Lord Kelvin posits that the Earth is only
+    description: "This fun paper by Lord Kelvin posits that the Earth is only
     about 20,000,000 to 400,000,000 years old due to the current temperature of
     the Earth. While we now know this is not correct (as he didn't know  about
     convection currents and nuclear reactions), it is still an interesting view
-    into a once controversial topic and it's implication for evolution.
+    into a once controversial topic and its implication for evolution."
 
   - title: "A Devonian tetrapod-like fish and the evolution of the tetrapod body plan"
     author: "Edward B. Daeschler, Neil H. Shubin, and Farish A. Jenkins Jr."
