Page was failing to build with YAML error

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -181,8 +181,8 @@ Week 4 - Population Genetics:
     author: "The Genetic Science Center."
     journal: "Unversity of Utah"
     link: "http://learn.genetics.utah.edu/content/pigeons/"
-    description: Our discussion of heritable transmission of traits was based in part in thinking about
-the head-crest in pigeons and this wonderful website is a great resource to learn more.
+    description: "Our discussion of heritable transmission of traits was based in part in thinking about
+the head-crest in pigeons and this wonderful website is a great resource to learn more."
 
   - title: "Gene Frequency in Small Populations of Mutant <i> Drosophila</i>"
     author: "Peter Buri."
