Updated typo in papers

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -135,7 +135,7 @@ Week 3 - The Fossil Record and Evolution:
     year: 2007
     description: "A very interesting brief video featuring Philip Gingerich and his work on whale evolution and the fossil record."
 
-  - title: "On the Secular Cooling of teh Earth"
+  - title: "On the Secular Cooling of the Earth"
     author: Lord Kelvin (William Thomson).
     journal: "Transactions of the Royal Society of Edinburgh"
     volume: XXIII
