Added posting of Eric Lander's talk.

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -177,6 +177,14 @@ Week 3 - The Fossil Record and Evolution:
 
 Week 4 - Population Genetics:
 
+  - title: "Introduction to Biology"
+    author:  "Eric Lander."
+    year: "2004"
+    journal: MIT
+    link: "https://www.youtube.com/watch?v=9iaoypSrIT0"
+    description: "Prof. Lander between 10:00 and 16:00 gives an inspiring description of
+where Gregor Mendel’s work really came from."
+
   - title: "Pigeon Breeding: Genetics at Work"
     author: "The Genetic Science Center."
     journal: "Unversity of Utah"
