Added links to the photosystem structure entries

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -222,6 +222,18 @@ the head-crest in pigeons and this wonderful website is a great resource to lear
     description:
       "A recent review and perspective on the changing face of evolution and how the use of concepts from physics can help build a predictive theory of evolution."
 
+Week 5 - Photosynthesis:
+
+  - title: PDB Molecule of the Month series for <a href="https://pdb101.rcsb.org/motm/59">Photosystem II </a> and <a href="https://pdb101.rcsb.org/motm/22"> Photosystem I </a>
+    author: "David Goodsell."
+    journal: "Protein Data Bank"
+    year: 2004 & 2001
+    description:
+     "These two brief entries from the molecule of the month series at the
+     Protein Data Bank give a very nice description of the photosystem
+     complexes, central to the process of photosynthesis."
+  
+
 Week 6 - Cell Biology & Gene Expression:
   - title: "Qunatitative dissection of the simple repression input-output function"
     author: "Hernan G. Garcia and Rob Phillips"
