Fixed a typo preventing page Building

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -283,7 +283,6 @@ Week 8 - Chemotaxis and Vision:
     journal: 'iBiology lectures'
     year: 2010
     link: "https://www.ibiology.org/ibioseminars/neuroscience/jeremy-nathans-part-1a.html"
-    description:
-      "These lectures from Jeremy Nathans are the best I know of
+    description: "These lectures from Jeremy Nathans are the best I know of
       for getting a sense of the science behind vision.  Much of what I do in
       class is inspired by Nathans."
