Found another YAML typo

--- a/_data/papers.yaml
+++ b/_data/papers.yaml
@@ -278,7 +278,7 @@ Week 7 -  The Body Plan:
 
 
 Week 8 - Chemotaxis and Vision:
-  - title: The Vertebrate Retina: Structure, Function, and Evolution
+  - title: "The Vertebrate Retina: Structure, Function, and Evolution"
     author: Jeremy Nathans.
     journal: 'iBiology lectures'
     year: 2010
