fix broken bare 2017 link

--- a/_data/2017/navigation.yml
+++ b/_data/2017/navigation.yml
@@ -1,6 +1,6 @@
 sitemap:
   - title: about
-    url: /2017/about
+    url: /2017/index
   - title: schedule
     url: /2017/schedule
   - title: policies
