all but one metadata done

--- a/_data/2023/members.yaml
+++ b/_data/2023/members.yaml
@@ -41,7 +41,7 @@
 - name: Gabby Dituri
   email: gdituri
   year: Senior
-  major: tbd
+  major: Physics
   image: gdituri.jpg
   role: TA
   pronouns: she/her
@@ -49,7 +49,7 @@
 - name: Katelyn Lee
   email: kslee
   year: Senior
-  major: tbd
+  major: Bioengineering
   image: klee.jpg
   role: TA
   pronouns: she/her
@@ -57,7 +57,7 @@
 - name: Makena Rodriguez
   email: mlrodrig
   year: Senior
-  major: tbd
+  major: Bioengineering
   image: mrodriguez.jpg
   role: TA
   pronouns: she/her
@@ -65,7 +65,7 @@
 - name: Maggie Sui
   email: msui
   year: Senior
-  major: tbd
+  major: Bioengineering
   image: msui.jpg
   role: TA
   pronouns: she/her
@@ -73,7 +73,7 @@
 - name: Matticus Brown
   email: msbrown
   year: Senior 
-  major: tbd
+  major: Mechanical Engineering
   image: mbrown.jpg
   role: TA
   pronouns: he/him
@@ -81,7 +81,7 @@
 - name: Adele Basturk
   email: abasturk
   year: Sophomore
-  major: tbd
+  major: Physics
   image: abasturk.jpg
   role: TA
   pronouns: she/her
@@ -89,7 +89,7 @@
 - name: Maya de Luis
   email: mdeluis
   year: Sophomore 
-  major: tbd
+  major: Biology
   image: mdeluis.jpg
   role: TA
   pronouns: she/her
@@ -97,7 +97,7 @@
 - name: Victor Gomez
   email: vgomez
   year: Sophomore 
-  major: tbd
+  major: 
   image: vgomez.jpg
   role: TA
   pronouns: he/him
