add victor major

--- a/_data/2023/members.yaml
+++ b/_data/2023/members.yaml
@@ -113,7 +113,7 @@
 - name: Victor Gomez
   email: vgomez
   year: Sophomore 
-  major: 
+  major: Physics
   image: vgomez.jpg
   role: TA
   pronouns: he/him
