remove numeracy exam, add tutorial page, cleanup dead links

--- a/_data/2023/navigation.yml
+++ b/_data/2023/navigation.yml
@@ -9,7 +9,7 @@ sitemap:
     url: /2023/people
   - title: homework
     url: /2023/homework
-  - title: programming
-    url: /2023/programming
+  - title: tutorials
+    url: /2023/tutorials
   - title: readings
     url: /2023/readings
